# portfolio

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.toml  hugo_stats.json  implementation-plan.md  package-lock.json  package.json  test-syntax-highlighting.js  vercel.json
.cursor/rules/: webdev.mdc
.vercel/: project.json
assets/sass/: researcher.scss
content/: _index.md  contact.md
content/articles/: _index.md  ai-frameworks.md  alpenglow-summary.md  arbitrage.md  claude-code-best-practices.md  drift-orderbook.md  eip7702.md  funding-rate-screener.md  performance-engineering-notes.md  quant-trading-guide.md  reth-hoodi-chill-guide.md  rust-optimization.md  simple-trade.md
data/: articles.yml
layouts/: index.html
layouts/_default/: baseof.html  list.html  single.html
layouts/articles/: list.html
layouts/partials/: footer.html  googleanalytics.html  head.html  header.html  math.html  mermaid.html
layouts/shortcodes/: mermaid.html
new-blog/: Cargo.toml  package-lock.json  package.json
public/: 404.html  index.html  index.xml  sitemap.xml
public/articles/: index.html  index.xml
public/contact/: index.html
public/css/: custom.css  experience.css  syntax.css
public/js/: theme-toggle.js
public/sass/: researcher.min.css
scripts/: deploy.sh  serve.sh
src/: article.rs  main.rs  markdown.rs
static/: btc_returns_distribution.html  changepoint-guide.html  polymarket-infra.html  test-navbar.html
static/css/: article-navigation.css  articles-filter.css  custom.css  input.css  (+2 more)
templates/: article.html  base.html  index.html
(+12 files in other folders)
