[package]
name = "new-blog"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
tera = "1"
pulldown-cmark = { version = "0.11", default-features = false, features = ["html"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
tokio = { version = "1", features = ["full"] } 